<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="useralert">*</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">运检低压线路采录</string>
    <string name="pwd">密    码：</string>
    <string name="pwdSure">密码确认：</string>
    <string name="user">用户名：</string>
    <string name="login">登陆</string>
    <string name="cancel">取消</string>
    <string name="setting">设 置</string>
    <string name="msg_user">用戶信息</string>
    <string name="register">注册</string>
    <string name="txtUserLoginView">欢迎登录</string>
    <string name="user_register">用户注册</string>
    <string name="isNull">*</string>
    <string name="note_txt">私人微记事</string>
    <string name="imb_finish">完成</string>
    <string name="imb_edit">修改</string>
    <string name="imb_del">删除</string>
    <string name="imb_delAll">删除全部</string>
    <string name="imb_exit">退出程序</string>
    <string name="detail_note">详细记录</string>
    <string name="detail_title">标题:</string>
    <string name="detail_content">主要内容</string>
    <string name="imb_add">新增</string>
    <string name="detail_date">日期:</string>
    <string name="detail_btnDate">日期</string>
    <string name="note_loginUser">当前用户：</string>
    <string name="btnDelete">删除</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
</resources>
