<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@color/notebook" >
	<TextView android:id="@+id/note_detail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="5dp"
		android:textColor="@color/red"
		android:textSize="20dip"
		android:text="@string/detail_note" />

	<LinearLayout
		android:id="@+id/linearLayout01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip"
		android:background="@color/notebook"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/detail_txtDate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginTop="5dp"
			android:text="@string/detail_date"
			android:textColor="@color/black"
			android:textSize="15dip" />

		<EditText
			android:id="@+id/detail_eTxtDate"
			android:layout_width="250dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"  
			android:hint="" />
	</LinearLayout>

    <LinearLayout android:id="@+id/linearLayout06"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/notebook"
		android:layout_marginTop="5dip">
		<TextView android:id="@+id/detail_txtTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="2dp"
		android:layout_marginTop="5dp"
		android:textColor="@color/black"
		android:textSize="15dip"
		android:text="@string/detail_title" />
	<EditText android:id="@+id/detail_eTxtitle"
		android:hint=""
		android:layout_marginTop="5dp"
		android:layout_width="250dip"
		android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/notebook"
		android:layout_marginTop="5dip"
		android:layout_gravity="center">
		<TextView android:id="@+id/detail_txtContent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:textColor="@color/black"
		android:textSize="15dip"
		android:text="@string/detail_content" />
		
	</LinearLayout>
    <LinearLayout android:id="@+id/linearLayout03"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/notebook"
		android:layout_marginTop="5dip">
		
	  <EditText
		android:id="@+id/detail_eTxtContent"
		android:layout_width="fill_parent"
		android:layout_height="200dp"
		android:inputType="textMultiLine" >
      
	
	   </EditText>
		
	</LinearLayout>     <LinearLayout android:id="@+id/main_linearLayout04"
	  android:orientation="horizontal"
      android:layout_gravity="center"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="5dp">
	  
	  <Button android:id="@+id/detail_btnFinish"
	  	android:layout_width="60dip"
	  	android:layout_height="wrap_content"
	  	android:text="@string/imb_finish"/>
	    <Button android:id="@+id/detail_btnDate"
	    android:layout_marginLeft="15dip"
	  	android:layout_width="60dip"
	  	android:layout_height="wrap_content"
	  	android:text="@string/detail_btnDate"/>
	     <Button android:id="@+id/detail_btndelete"
	  	android:layout_width="60dip"
	  	android:layout_height="wrap_content"
	  	android:layout_marginLeft="15dip"
	  
	  	android:text="@string/btnDelete"/>
	  <Button android:id="@+id/detail_btnCancel"
	  	android:layout_marginLeft="15dip"
	  	android:layout_width="60dip"
	  	android:layout_height="wrap_content"
	  	android:text="@string/cancel"/>
</LinearLayout></LinearLayout>