<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" 
	android:background="@color/notebook">
	<LinearLayout
   	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:layout_margin="4dip"
    	android:orientation="vertical"
    	>  	
    	<ListView 
			android:id="@+id/note_lvTitle"       
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"	
			android:background="@color/notebook"			
			android:choiceMode="singleChoice"
			android:cacheColorHint="#00000000"
			android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:dividerHeight="0.1dp"
            android:divider="@color/diviceline"
			android:longClickable="true"
		/>
    	<View 
    	   android:layout_width="fill_parent" 
		   android:layout_height="0.1dp"	 
    	    android:paddingLeft="10dp"
            android:paddingRight="10dp"
    	    
    	    />
    </LinearLayout>
   
     <LinearLayout android:id="@+id/linearLayout01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/notebook"
		android:layout_marginTop="5dip"
		android:layout_gravity="center">
		<ImageButton android:id="@+id/btndirAdd"
			android:contentDescription="@string/imb_add"
			android:src="@drawable/newone"
			android:layout_width="60dip"
			android:layout_height="60dip"
			/>
		<ImageButton android:id="@+id/btnnoteAdd"
			android:contentDescription="@string/imb_add"
			android:src="@drawable/newone"
			android:layout_width="60dip"
			android:layout_height="60dip"
			/>
		<ImageButton android:id="@+id/ibgBtnDelAll"
			android:contentDescription="@string/imb_delAll"
			android:src="@drawable/deleteall"
			android:layout_width="60dip"
			android:layout_height="60dip"
			android:layout_marginLeft="50dip"/>
		<ImageButton android:id="@+id/ibgBtnExit"
			android:contentDescription="@string/imb_exit"
			android:src="@drawable/ico_del"
			android:layout_width="60dip"
			android:layout_height="60dip"
			android:layout_marginLeft="50dip"/>
	</LinearLayout>
</LinearLayout>